--- a/src/pages/cart.css
+++ b/src/pages/cart.css
@@ -1,17 +1,20 @@
 .cart{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.cartItem {
-    width: 700px;
-    height: 250px;
-    /* display: flex; */
-    align-items: center;
-    border-radius: 25px;
-    display: grid;
+    width: 100%;
+    height: auto;
+    display: inline;
     grid-template-columns: 1fr 1fr 1fr;
     place-items: center;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.heading{
+    text-align: center;
+    font-size: large;
+}
+
+.cartItem input{
+    width: 40px;
+    text-align: center;
+    
 }
