--- a/src/pages/Cart.css
+++ b/src/pages/Cart.css
@@ -1,12 +1,20 @@
 .cart{
-    display: flex;
-    flex-direction: column;
+    width: 100%;
+    height: auto;
+    display: inline;
+    grid-template-columns: 1fr 1fr 1fr;
+    place-items: center;
     justify-content: center;
     align-items: center;
     
 }
+
+.heading{
+    text-align: center;
+    font-size: large;
+}
 .cartItem{
-    width: 700px;
+    width: 40px;
     height: 200px;
     display: flex;
      align-items: center;
@@ -18,8 +26,7 @@
     width: 200px;
 
 }
-.handler input{
+.cartItems input{
     width: 40px;
     text-align: center;
-    font-weight: bolder;
 }
